--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <div id="playhead"></div>
+  <div class="container">
+  <div class="box" id="a"></div>
+  <div class="box" id="b"></div>
+  <div class="box" id="c"></div>
+  <div class="box" id="d"></div>
+  <div class="box" id="e"></div>
+  <!-- <div class="box" id="f"></div> -->
+  <!-- <div class="box" id="g"></div> -->
+  <div class="box" id="h"></div>
+  <div class="box" id="i"></div>
+  <div class="box" id="j"></div>
+  <div class="box" id="k"></div>
+  <div class="box" id="l"></div>
+  <div class="box" id="m"></div>
+  <div class="box" id="o"></div>
+  <div id="playhead"></div>
+  </div>
 <%= yield %>
 
 </body>
