sounds working and basic layout sorted

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -42,12 +42,15 @@
   display: inline-block;
   border-collapse: collapse;
 }
-#a, #b, #c, #d, #e{
+#loop-1, #loop-2, #loop-3, #loop-4, #loop-5, #loop-6{
   background-color: pink;
 }
-#f, #g, #h, #i, #j, #k{
+#loop-7, #loop-8, #loop-9, #loop-10, #loop-11, #loop-12{
   background-color: yellow;
 }
-#l, #m, #n, #o, #p, #q{
+#loop-13, #loop-14, #loop-15, #loop-16, #loop-17, #loop-18{
   background-color: blue;
+}
+#loop-19, #loop-20, #loop-21, #loop-22, #loop-23, #loop-24{
+  background-color: green;
 }
