--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MisShapes</title>
+  <title>Mis-shapes</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,20 +9,30 @@
 <body>
   <div id="playhead"></div>
   <div class="container">
-  <div class="box" id="a"></div>
-  <div class="box" id="b"></div>
-  <div class="box" id="c"></div>
-  <div class="box" id="d"></div>
-  <div class="box" id="e"></div>
-  <!-- <div class="box" id="f"></div> -->
-  <!-- <div class="box" id="g"></div> -->
-  <div class="box" id="h"></div>
-  <div class="box" id="i"></div>
-  <div class="box" id="j"></div>
-  <div class="box" id="k"></div>
-  <div class="box" id="l"></div>
-  <div class="box" id="m"></div>
-  <div class="box" id="o"></div>
+  <div class="box" id="loop-1" data-value="1"></div>
+  <div class="box" id="loop-2" data-value="2"></div>
+  <div class="box" id="loop-3" data-value="3"></div>
+  <div class="box" id="loop-4" data-value="4"></div>
+  <div class="box" id="loop-5" data-value="5"></div>
+  <div class="box" id="loop-6" data-value="6"></div>
+  <div class="box" id="loop-7" data-value="7"></div>
+  <div class="box" id="loop-8" data-value="8"></div>
+  <div class="box" id="loop-9" data-value="9"></div>
+  <div class="box" id="loop-10" data-value=10""></div>
+  <div class="box" id="loop-11" data-value="11"></div>
+  <div class="box" id="loop-12" data-value="12"></div>
+  <div class="box" id="loop-13" data-value="13"></div>
+  <div class="box" id="loop-14" data-value="14"></div>
+  <div class="box" id="loop-15" data-value="15"></div>
+  <div class="box" id="loop-16" data-value="16"></div>
+  <div class="box" id="loop-17" data-value="17"></div>
+  <div class="box" id="loop-18" data-value="18"></div>
+  <div class="box" id="loop-19" data-value="19"></div>
+  <div class="box" id="loop-20" data-value="20"></div>
+  <div class="box" id="loop-21" data-value="21"></div>
+  <div class="box" id="loop-22" data-value="22"></div>
+  <div class="box" id="loop-23" data-value="23"></div>
+  <div class="box" id="loop-24" data-value="24"></div>
   <div id="playhead"></div>
   </div>
 <%= yield %>
