--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <canvas id="canvas"></canvas>
   <div id="playhead"></div>
   <div class="container">
   <div class="box" id="loop-1" data-value="1"></div>
@@ -15,12 +16,6 @@
   <div class="box" id="loop-4" data-value="4"></div>
   <div class="box" id="loop-5" data-value="5"></div>
   <div class="box" id="loop-6" data-value="6"></div>
-  <div class="box" id="loop-7" data-value="7"></div>
-  <div class="box" id="loop-8" data-value="8"></div>
-  <div class="box" id="loop-9" data-value="9"></div>
-  <div class="box" id="loop-10" data-value=10""></div>
-  <div class="box" id="loop-11" data-value="11"></div>
-  <div class="box" id="loop-12" data-value="12"></div>
   <div class="box" id="loop-13" data-value="13"></div>
   <div class="box" id="loop-14" data-value="14"></div>
   <div class="box" id="loop-15" data-value="15"></div>
@@ -33,6 +28,12 @@
   <div class="box" id="loop-22" data-value="22"></div>
   <div class="box" id="loop-23" data-value="23"></div>
   <div class="box" id="loop-24" data-value="24"></div>
+  <div class="box" id="loop-7" data-value="7"></div>
+  <div class="box" id="loop-8" data-value="8"></div>
+  <div class="box" id="loop-9" data-value="9"></div>
+  <div class="box" id="loop-10" data-value="10"></div>
+  <div class="box" id="loop-11" data-value="11"></div>
+  <div class="box" id="loop-12" data-value="12"></div>
   <div id="playhead"></div>
   </div>
 <%= yield %>
