--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,33 +7,31 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="playhead"></div>
   <div class="container">
-  <canvas class="box" id="loop-1" data-value="1"></canvas>
-  <canvas class="box" id="loop-2" data-value="2"></canvas>
-  <canvas class="box" id="loop-3" data-value="3"></canvas>
-  <canvas class="box" id="loop-4" data-value="4"></canvas>
-  <canvas class="box" id="loop-5" data-value="5"></canvas>
-  <canvas class="box" id="loop-6" data-value="6"></canvas>
-  <canvas class="box" id="loop-7" data-value="7"></canvas>
-  <canvas class="box" id="loop-8" data-value="8"></canvas>
-  <canvas class="box" id="loop-9" data-value="9"></canvas>
-  <canvas class="box" id="loop-10" data-value="10"></canvas>
-  <canvas class="box" id="loop-11" data-value="11"></canvas>
-  <canvas class="box" id="loop-12" data-value="12"></canvas>
-  <canvas class="box" id="loop-13" data-value="13"></canvas>
-  <canvas class="box" id="loop-14" data-value="14"></canvas>
-  <canvas class="box" id="loop-15" data-value="15"></canvas>
-  <canvas class="box" id="loop-16" data-value="16"></canvas>
-  <canvas class="box" id="loop-17" data-value="17"></canvas>
-  <canvas class="box" id="loop-18" data-value="18"></canvas>
-  <canvas class="box" id="loop-19" data-value="19"></canvas>
-  <canvas class="box" id="loop-20" data-value="20"></canvas>
-  <canvas class="box" id="loop-21" data-value="21"></canvas>
-  <canvas class="box" id="loop-22" data-value="22"></canvas>
-  <canvas class="box" id="loop-23" data-value="23"></canvas>
-  <canvas class="box" id="loop-24" data-value="24"></canvas>
-  <div id="playhead"></div>
+  <canvas class="box beats" id="loop-1" data-value="1"></canvas>
+  <canvas class="box beats" id="loop-2" data-value="2"></canvas>
+  <canvas class="box beats" id="loop-3" data-value="3"></canvas>
+  <canvas class="box beats" id="loop-4" data-value="4"></canvas>
+  <canvas class="box beats" id="loop-5" data-value="5"></canvas>
+  <canvas class="box beats" id="loop-6" data-value="6"></canvas>
+  <canvas class="box bass" id="loop-7" data-value="7"></canvas>
+  <canvas class="box bass" id="loop-8" data-value="8"></canvas>
+  <canvas class="box bass" id="loop-9" data-value="9"></canvas>
+  <canvas class="box bass" id="loop-10" data-value="10"></canvas>
+  <canvas class="box bass" id="loop-11" data-value="11"></canvas>
+  <canvas class="box bass" id="loop-12" data-value="12"></canvas>
+  <canvas class="box sounds" id="loop-13" data-value="13"></canvas>
+  <canvas class="box sounds" id="loop-14" data-value="14"></canvas>
+  <canvas class="box sounds" id="loop-15" data-value="15"></canvas>
+  <canvas class="box sounds" id="loop-16" data-value="16"></canvas>
+  <canvas class="box sounds" id="loop-17" data-value="17"></canvas>
+  <canvas class="box sounds" id="loop-18" data-value="18"></canvas>
+  <canvas class="box sounds" id="loop-19" data-value="19"></canvas>
+  <canvas class="box sounds" id="loop-20" data-value="20"></canvas>
+  <canvas class="box sounds" id="loop-21" data-value="21"></canvas>
+  <canvas class="box sounds" id="loop-22" data-value="22"></canvas>
+  <canvas class="box sounds" id="loop-23" data-value="23"></canvas>
+  <canvas class="box sounds" id="loop-24" data-value="24"></canvas>
   </div>
 <%= yield %>
 </body>
