--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -58,13 +58,32 @@ body{
   z-index: 1;
 }
 #loop-1.clicked, #loop-2.clicked, #loop-3.clicked, #loop-4.clicked, #loop-5.clicked, #loop-6.clicked{
-border:  2px solid white !important;
+  border:  2px solid white;
+  animation: pulse (.55s) infinite;
 }
 #loop-7.clicked, #loop-8.clicked, #loop-9.clicked, #loop-10.clicked, #loop-11.clicked, #loop-12.clicked{
-  border: 2px solid white !important;
-
+  border: 2px solid white;
+  animation: pulse (.55s) infinite;
 }
 #loop-13.clicked, #loop-14.clicked, #loop-15.clicked, #loop-16.clicked, #loop-17.clicked, #loop-18.clicked, #loop-19.clicked, #loop-20.clicked, #loop-21.clicked, #loop-22.clicked, #loop-23.clicked, #loop-24.clicked{
-  border: 2px solid white !important;
-
+  border: 2px solid black;
+  animation: pulse (.55s) infinite;
+}
+@keyframes pulse {
+  0%{
+    border: 1px solid black;
+    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 0.5);
+  }
+  25%{
+    border: 3px solid black;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+  }
+  50%{
+    border: 4px solid black;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+  }
+  100%{
+    border: 6px solid black;
+    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 1);
+  }
 }
