--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -87,3 +87,26 @@ body{
     box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 1);
   }
 }
+@keyframes onloadPulse {
+  0%{
+    // border: 1px solid black;
+    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 0.5);
+  }
+  25%{
+    // border: 3px solid black;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+  }
+  50%{
+    // border: 4px solid black;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+  }
+  100%{
+    // border: 6px solid black;
+    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 1);
+  }
+}
+.box{
+    background-color: white;
+    animation: onloadPulse 2s;
+    animation-direction: alternate;
+}
