--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,32 @@
 </head>
 <body>
   <div class="container">
+    <div class="modal_container1">
+      <div class="modal">
+        <div id="welcome">
+  <p id='superdisco'><a href='#'>
+    SUPERDISCO
+  </a></p>
+</div>
+      </div>
+    </div>
+    <div class="modal_container2">
+      <div class="modal">
+        <div class="instruct">
+        <p>Welcome to Superdisco!</p>
+        <p>Here anyone can be an amazing DJ if you follow these rules:</p>
+        <p>Click on the squares to create some epic tunes. Make sure to choose
+        2 of the purple squares, 2 of the pink suares and any combination of 4
+        of the blue squares. When you hit 8...Superdisco! You can remove and add
+        squares to create your own hits</p>
+        </div>
+        <div id="play">
+  <p id='play'><a href='#'>
+    PLAY
+  </a></p>
+</div>
+      </div>
+    </div>
   <canvas class="box beats" id="loop-1" data-value="1"></canvas>
   <canvas class="box beats" id="loop-2" data-value="2"></canvas>
   <canvas class="box beats" id="loop-3" data-value="3"></canvas>
