--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,36 +1,18 @@
-// Place all the styles related to the Pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-body{
+body {
   background-color: #000;
 }
-.open{
+.open {
   width: 100vw;
   height: 100vh;
   background-color: pink;
 }
-/*#start-button{
-  width: 20px;
-  height: 10px;
-  background-color: red;
-}*/
-.playHead{
-  background-color: red;
-  transform: translate3d(-100%, 0, 0);
-}
-/*.count{
-  position: absolute;
-  height: 20px;
-  background-color: green;
-  width: 400px;
-}*/
-.container{
+.container {
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
   position: relative;
 }
-.box{
+.box {
   // transform: rotate(45deg);
   width: 45px;
   height: 45px;
@@ -39,74 +21,116 @@ body{
   border-collapse: collapse;
   border-radius: 0.2em;
 }
-#loop-1, #loop-2, #loop-3, #loop-4, #loop-5, #loop-6{
+#loop-1,
+#loop-2,
+#loop-3,
+#loop-4,
+#loop-5,
+#loop-6 {
   width: 16.30%;
   height: 24.25%;
   background-color: #000;
   z-index: 1;
 }
-#loop-7, #loop-8, #loop-9, #loop-10, #loop-11, #loop-12{
+#loop-7,
+#loop-8,
+#loop-9,
+#loop-10,
+#loop-11,
+#loop-12 {
   width: 16.30%;
   height: 24.25%;
   background-color: #000;
   z-index: 1;
 }
-#loop-13, #loop-14, #loop-15, #loop-16, #loop-17, #loop-18, #loop-19, #loop-20, #loop-21, #loop-22, #loop-23, #loop-24{
+#loop-13,
+#loop-14,
+#loop-15,
+#loop-16,
+#loop-17,
+#loop-18,
+#loop-19,
+#loop-20,
+#loop-21,
+#loop-22,
+#loop-23,
+#loop-24 {
   width: 16.30%;
   height: 24.25%;
   background-color: #000;
   z-index: 1;
 }
-#loop-1.clicked, #loop-2.clicked, #loop-3.clicked, #loop-4.clicked, #loop-5.clicked, #loop-6.clicked{
-  border:  2px solid white;
-  animation: pulse (.55s) infinite;
-}
-#loop-7.clicked, #loop-8.clicked, #loop-9.clicked, #loop-10.clicked, #loop-11.clicked, #loop-12.clicked{
+#loop-1.clicked,
+#loop-2.clicked,
+#loop-3.clicked,
+#loop-4.clicked,
+#loop-5.clicked,
+#loop-6.clicked {
   border: 2px solid white;
   animation: pulse (.55s) infinite;
 }
-#loop-13.clicked, #loop-14.clicked, #loop-15.clicked, #loop-16.clicked, #loop-17.clicked, #loop-18.clicked, #loop-19.clicked, #loop-20.clicked, #loop-21.clicked, #loop-22.clicked, #loop-23.clicked, #loop-24.clicked{
+#loop-7.clicked,
+#loop-8.clicked,
+#loop-9.clicked,
+#loop-10.clicked,
+#loop-11.clicked,
+#loop-12.clicked {
+  border: 2px solid white;
+  animation: pulse (.55s) infinite;
+}
+#loop-13.clicked,
+#loop-14.clicked,
+#loop-15.clicked,
+#loop-16.clicked,
+#loop-17.clicked,
+#loop-18.clicked,
+#loop-19.clicked,
+#loop-20.clicked,
+#loop-21.clicked,
+#loop-22.clicked,
+#loop-23.clicked,
+#loop-24.clicked {
   border: 2px solid black;
   animation: pulse (.55s) infinite;
 }
 @keyframes pulse {
-  0%{
+  0% {
     border: 1px solid black;
-    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.5);
   }
-  25%{
+  25% {
     border: 3px solid black;
-    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
   }
-  50%{
+  50% {
     border: 4px solid black;
-    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
   }
-  100%{
+  100% {
     border: 6px solid black;
-    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 1);
   }
 }
 @keyframes onloadPulse {
-  0%{
+  0% {
     // border: 1px solid black;
-    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.5);
   }
-  25%{
+  25% {
     // border: 3px solid black;
-    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
   }
-  50%{
+  50% {
     // border: 4px solid black;
-    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
   }
-  100%{
+  100% {
     // border: 6px solid black;
-    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 1);
   }
 }
-.box{
-    background-color: white;
-    animation: onloadPulse 2s;
-    animation-direction: alternate;
+.box {
+  background-color: white;
+  animation: onloadPulse 2s;
+  animation-direction: alternate;
 }
