--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -96,41 +96,18 @@ body {
 @keyframes pulse {
   0% {
     border: 1px solid black;
-    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 1px 1px rgba(255, 0, 222, .5);
   }
   25% {
     border: 3px solid black;
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 1);
   }
   50% {
     border: 4px solid black;
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 2px 2px rgba(255, 0, 222, 1);
   }
   100% {
     border: 6px solid black;
-    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 1px 1px rgba(255, 0, 222, .75);
   }
-}
-@keyframes onloadPulse {
-  0% {
-    // border: 1px solid black;
-    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.5);
-  }
-  25% {
-    // border: 3px solid black;
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
-  }
-  50% {
-    // border: 4px solid black;
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 1);
-  }
-  100% {
-    // border: 6px solid black;
-    box-shadow: 0 0 1px 1px rgba(255, 255, 255, 1);
-  }
-}
-.box {
-  background-color: white;
-  animation: onloadPulse 2s;
-  animation-direction: alternate;
 }
