--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -49,7 +49,7 @@
   color: white;
 }
 p:nth-child(1) a {
-  color: #fff;
+  color: #F4DED4;
   font-family: 'Monoton', cursive;
 }
 #welcome {
@@ -63,9 +63,10 @@ p:nth-child(1) a {
   margin: 0 auto;
 }
 
-/*neeeeoooon*/
+/* NEON */
 
 p {
+  color: #F4DED4;
   text-align: center;
   font-size: 7em;
   margin: 20px 0 20px 0;
